# projetario

./: .dockerignore  .env.sample  .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE  biome.json  compose.yaml  package-lock.json  package.json  readme.md  rodar-db-seeder.sh  rodar-testes.sh  rust-toolchain.toml  rustfmt.toml  tsconfig.json  vite.config.ts
.github/: contribuindo.md  requisitos.md
.github/workflows/: linting.yaml  pipeline.yaml  tests.yaml
config/: Cargo.toml
config/src/: app.rs  inertia.rs  lib.rs  mod.rs  vite.rs
db_seeder/: Cargo.toml
db_seeder/src/: lib.rs  main.rs  senhas.rs  usuarios.rs
erros/: Cargo.toml
migrations/: 20250609042814_cria-tabelas-de-usuarios-e-projetos.down.sql  20250609042814_cria-tabelas-de-usuarios-e-projetos.up.sql  20250628050513_aumenta-o-tamanho-do-campo-de-senha-dos-usuarios.down.sql  20250628050513_aumenta-o-tamanho-do-campo-de-senha-dos-usuarios.up.sql  20250710044116_cria-tabela-de-vagas.down.sql  20250710044116_cria-tabela-de-vagas.up.sql
public/tiny-mce/langs/: pt_BR.js
sessions/: Cargo.toml
sessions/src/: file_session.rs  helpers.rs  lib.rs  test_utils.rs
sessions/src/middlewares/: garbage_collector.rs  reflash_temporary_session.rs
src/: lib.rs  main.rs
src/config/: app.rs
src/dominio/: mod.rs
src/dominio/autenticacao/: mod.rs  traits.rs
src/dominio/autenticacao/politicas/: autorizacao.rs  mod.rs
src/dominio/autenticacao/servicos/: autenticar_usuario.rs  mod.rs
src/dominio/identidade/: mod.rs  traits.rs
src/dominio/identidade/entidades/: aluno.rs  mod.rs  professor.rs  usuario.rs
src/dominio/identidade/enums/: cargo.rs
src/dominio/identidade/politicas/: mod.rs  registro_de_aluno.rs
src/dominio/identidade/repositorios/: usuarios.rs
src/dominio/projetos/: mod.rs
src/dominio/projetos/entidades/: projeto.rs
src/dominio/projetos/enums/: mod.rs  tipo_de_coordenacao.rs  tipo_de_projeto.rs
src/dominio/projetos/repositorios/: coordenadores_de_projetos.rs  mod.rs  projetos.rs
src/dominio/projetos/servicos/: buscar_projetos.rs  criar_projeto_de_extensao.rs  mod.rs
src/dominio/vagas/: mod.rs
src/dominio/vagas/entidades/: mod.rs  vaga.rs
src/dominio/vagas/repositorios/: mod.rs  vaga.rs
src/dominio/vagas/servicos/: alterar_vaga.rs  buscar_vagas_de_projetos.rs  cancelar_vaga.rs  criar_vaga.rs  mod.rs
src/infra/: mod.rs
src/infra/crypto/: comparador_e_hasher_de_senhas.rs  mod.rs
src/infra/dtos/: mod.rs
src/infra/dtos/autenticacao/: login.rs  mod.rs
src/infra/dtos/projetos/: buscar_projeto.rs  criar_projeto.rs  mod.rs
src/infra/dtos/vagas/: criar_vaga.rs  criar_vagas.rs  mod.rs
src/infra/fabricas/: mod.rs
src/infra/fabricas/servicos/: autenticacao.rs  buscar_projetos.rs  criar_projeto_de_extensao.rs  criar_vaga.rs  mod.rs
src/infra/http/: mod.rs
src/infra/http/controllers/: autenticacao.rs  mod.rs  professores.rs  projetos.rs
src/infra/http/controllers/professores/: projetos_de_extensao.rs  vagas.rs
src/infra/http/middlewares/: mod.rs  somente_com_cargo.rs  usuario_da_requisicao.rs
src/infra/http/presenters/: usuario_modelo.rs
src/infra/http/routers/: mod.rs  web.rs
src/infra/repositorios/sqlx/: coordenadores_de_projetos.rs  mod.rs  projetos.rs  usuarios.rs  vagas.rs
src/libs/: actix.rs  inertia.rs  mod.rs  validator.rs
src/libs/actix/: server.rs
src/libs/validator/: registro_de_aluno.rs
src/utils/: mod.rs
src/utils/common/: macros.rs
src/utils/common/macros/: unwrap_or_redirect.rs
src/utils/erros/: erro_banco.rs  erro_de_dominio.rs  mod.rs  resultado_de_dominio.rs  tipo_erro_de_dominio.rs
src/utils/sqlx/: mod.rs
src/utils/test/: comparador_e_hasher_de_senhas.rs  mod.rs
src/utils/test/fabricas_de_entidades/: mod.rs  usuario_modelo.rs
src/utils/test/repositorios_em_memoria/: coordenadores_de_projetos.rs  mod.rs  usuarios.rs
src/utils/test/repositorios_em_memoria/fabricas/: fabrica_repositorio_de_coordenadores_de_projetos.rs  fabrica_repositorio_de_usuarios.rs  mod.rs
tests/common/: fixtures.rs  mod.rs  setup.rs  utils.rs
tests/common/fixtures/: db_guard.rs  inertia.rs
tests/common/utils/: esquema_db.rs  headers.rs
tests/controllers/: mod.rs
tests/controllers/autenticacao/: login.rs
tests/controllers/professores/: mod.rs  novo_projeto_de_extensao.rs
www/: app.css  app.tsx  root.hbs  ssr.tsx  vite.config.ts
www/components/: h1.tsx  main.tsx  tinymce-editor.tsx
www/components/button/: cta.tsx  index.tsx  secundario.tsx
www/components/form/: alerta-de-erro.tsx  editor.tsx  index.tsx  input.tsx  label-span.tsx
www/core/types/: usuario-autenticado.ts
www/core/types/entidades/: usuario-modelo.ts
www/core/types/enums/: cargo.ts
www/core/utils/: hierarquia-de-cargo.ts
www/layouts/: default.tsx
www/lib/: inertia.tsx
www/pages/: index.tsx
www/pages/autenticacao/: login.tsx
www/pages/geral/: pesquisar.tsx
www/pages/professores/projetos/: novo-projeto-de-extensao.tsx
www/pages/professores/vagas/: nova.tsx
www/ui/header/: botao-de-login.tsx  botao-de-tema.tsx  dropdown-usuario.tsx  index.tsx  nav-item.tsx
