[package]
name = "projetario"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-session = "0.10.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = { version = "0.22", features = ["std"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures-util = "0.3.31"
inertia-rust = { version = "2.4.3", features = ["actix", "vite-hbs-template-resolver", "actix-validator"] }
log = "0.4.27"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "derive", "migrate", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["fs", "io-std", "rt", "rt-multi-thread", "macros"] }
validator = { version = "0.20", features = ["derive"] }
vite-rust = "0.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"
tokio = { version = "1.45.0", features = ["test-util"] }
