[package]
name = "projetario"
version.workspace = true
edition.workspace = true

[features]
dockerimgb = ["openssl/vendored"]
test-utils = ["dep:fake", "dep:rand"]

[workspace]
members = ["config", "sessions"]
package.version = "0.1.0"
package.edition = "2024"

[workspace.dependencies]
inertia-sessions.path = "sessions"
config.path = "config"
actix-files = "0.6.6"
actix-session = "0.10.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
inertia-rust = { version = "2.4.3", features = [
    "actix",
    "vite-hbs-template-resolver",
    "actix-validator",
] }
tokio = { version = "1.45.0", features = [
    "fs",
    "io-std",
    "rt",
    "rt-multi-thread",
    "macros",
] }
vite-rust = "0.2"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
rand = "0.9.1"
chrono = { version = "0.4.41", features = ["serde"] }
pretty_assertions = "1.4.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures-util = "0.3.31"
thiserror = "2.0.12"
rstest = "0.25.0"

[dependencies]
actix-files.workspace = true
actix-session.workspace = true
tokio.workspace = true
vite-rust.workspace = true
inertia-sessions.workspace = true
config.workspace = true
inertia-rust.workspace = true
anyhow.workspace = true
async-trait.workspace = true
actix-web.workspace = true
chrono.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "postgres",
    "derive",
    "migrate",
    "chrono",
    "uuid",
] }
thiserror.workspace = true
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
openssl = { version = "0.10.73" }
pbkdf2 = { version = "0.12", features = ["simple"] }
fake = { version = "4.3.0", features = ["derive", "chrono"], optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
